--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,4 +1,23 @@
 {
   "name": "playground",
-  "packageManager": "yarn@3.2.3"
+  "packageManager": "yarn@3.2.2",
+  "private": true,
+  "type": "commonjs",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "themebox": "0.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.16",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "vite": "^2.9.9"
+  }
 }
