--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "react/prop-types": "off",
     "(@typescript-eslint/no-empty-interface": "off",
-    "no-unused-vars": "warn",
+    "@typescript-eslint/no-unused-vars": "warn",
     "prefer-const": "error"
   },
   "settings": {
