--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -22,7 +22,8 @@
     "lodash.get": "^4.4.2",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
@@ -30,6 +31,7 @@
     "@types/jest": "^29.0.0",
     "@types/lodash.get": "^4.4.7",
     "@types/node": "^18.7.16",
+    "@types/styled-system": "^5.1.15",
     "esbuild-jest": "^0.5.0",
     "jest": "^29.0.2",
     "tsup": "^6.2.3"
