--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,11 @@ node_modules/
 dist
 
 .idea/
-.yarn
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
