--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -13,7 +13,7 @@
     "build": "yarn run build:types && yarn run build:source",
     "build:types": "tsc",
     "build:source": "tsup src/index.ts",
-    "test": "jest",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^11.10.0",
