allow themed functions as values

--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -8,7 +8,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "run-p --continue-on-error watch:source watch:types",
-    "watch:types": "tsc -w",
+    "watch:types": "npx tsc -w",
     "watch:source": "tsup src/index.ts --watch",
     "build": "yarn run build:types && yarn run build:source",
     "build:types": "tsc",
