--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "themebox",
-  "private": true,
+  "name": "@flodlc/sxmachine",
+  "author": "flodlc",
+  "license": "MIT",
   "main": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "type": "commonjs",
+  "type": "module",
   "packageManager": "yarn@3.2.1",
-  "version": "0.1.0",
+  "version": "1.0.2",
   "scripts": {
     "dev": "run-p --continue-on-error watch:source watch:types",
     "watch:types": "npx tsc -w",
@@ -16,25 +17,41 @@
     "test": "jest"
   },
   "dependencies": {
-    "@emotion/babel-preset-css-prop": "^11.10.0",
     "@emotion/react": "^11.10.4",
-    "@types/react": "^18.0.19",
     "lodash.get": "^4.4.2",
-    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "stable-hash": "^0.0.2",
-    "styled-system": "^5.1.5"
+    "stable-hash": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@emotion/babel-plugin": "^11.10.2",
+    "@emotion/babel-preset-css-prop": "^11.10.0",
     "@types/jest": "^29.0.0",
     "@types/lodash.get": "^4.4.7",
     "@types/node": "^18.7.16",
-    "@types/styled-system": "^5.1.15",
+    "@types/react": "^18.0.19",
     "esbuild-jest": "^0.5.0",
     "jest": "^29.0.2",
+    "npm-run-all": "^4.1.5",
     "tsup": "^6.2.3"
-  }
+  },
+  "files": [
+    "dist/*"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/flodlc/themebox"
+  },
+  "keywords": [
+    "theme",
+    "design",
+    "sx",
+    "react",
+    "box",
+    "css",
+    "css-in-js",
+    "emotion",
+    "theming"
+  ]
 }
