--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -2,11 +2,11 @@
   "name": "@flodlc/sxmachine",
   "author": "flodlc",
   "license": "MIT",
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
   "packageManager": "yarn@3.2.1",
-  "version": "1.0.3",
+  "version": "1.0.7",
   "scripts": {
     "dev": "run-p --continue-on-error watch:source watch:types",
     "watch:types": "npx tsc -w",
