--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@flodlc/sxmachine",
+  "name": "sx-machine",
   "author": "flodlc",
   "license": "MIT",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
   "packageManager": "yarn@3.2.1",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "scripts": {
     "dev": "run-p --continue-on-error watch:source watch:types",
     "watch:types": "npx tsc -w",
